--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <header class="white-text-container section-container">
     <div class="text-center">
       <h1>I am Seng Kue Vang</h1>
-      <p>Web designer</p>
+      <p>Web developer</p>
       <p>
         <a class="fa-icon fa-icon-2x" href="https://facebook.com/" title="">
           <i class="fa fa-facebook"></i>
@@ -66,7 +66,7 @@
               </div>
               <div class="col-md-8">
 
-              <p>Heloo everyone, I am Seng Kue Vang, I am from Laos, in the small country that you never know before Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <p>Heloo everyone, I am Seng Kue Vang, I am from Laos, in the small country that you never know before. All of things in this world so the important I know it's not free, befor we will get there it's not easy. We have to pay to buy to work to steal. It's no the way, We will scare shy. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
               <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
               </div>
@@ -154,17 +154,17 @@
             <div class="row">
               <div class="col-md-4">
                 <div class="language-experience">
-                  <h3 class="h5">English  <small>Bilingual</small></h3>
+                  <h3 class="h5"><small>HTML CSS JAVASCRIPT</small></h3>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="language-experience">
-                  <h3 class="h5">Lao  <small>Fluent</small></h3>
+                  <h3 class="h5"><small>PHP LARAVEL Fluent</small></h3>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="language-experience">
-                  <h3 class="h5">Hmong  <small>Beginner</small></h3>
+                  <h3 class="h5"><small>Hmong Laos Thia English</small></h3>
                 </div>
               </div>
             </div>
@@ -183,14 +183,14 @@
                 <img src="./assets/images/img-05.jpg" class="img-responsive" alt="...">
                 <div class="carousel-caption">
                   <h3 class="h5">Jules for Bastion</h3>
-                  <p>2017</p>
+                  <p>2020</p>
                 </div>
               </div>
               <div class="item">
                 <img src="./assets/images/img-06.jpg" class="img-responsive" alt="...">
                 <div class="carousel-caption">
                   <h3 class="h5">Jules for Bastion</h3>
-                  <p>2017</p>
+                  <p>2021</p>
                 </div>
               </div>
 
@@ -198,7 +198,7 @@
                 <img src="./assets/images/img-08.jpg" class="img-responsive" alt="...">
                 <div class="carousel-caption">
                   <h3 class="h5">Jules for Bastion</h3>
-                  <p>2017</p>
+                  <p>2021</p>
                 </div>
               </div>
             </div>
