--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               </div>
               <div class="col-md-8">
 
-              <p>Heloo everyone, I am Seng Kue Vang, I am from Laos, in the small country that you never know before. All of things in this world so the important I know it's not free, befor we will get there it's not easy. We have to pay to buy to work to steal. It's no the way, We will scare shy. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <p>Hello everyone, I am Seng Kue Vang, I am from Laos, in the small country that you never know before. All of things in this world so the important I know it's not free, befor we will get there it's not easy. We have to pay to buy to work to steal. It's no the way, We will scare shy. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
               <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
               </div>
