--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="row">
               <div class="col-md-4">
                 <div class="education-experience">
-                  <small class="date">2017-2015</small>
+                  <small class="date">2019-2024</small>
                   <h3 class="h5 date-title">Design Master</h3>
                   <p>Chicago University</p>
                 </div>
@@ -219,13 +219,13 @@
             <h2>Social Network</h2>
             <div class="row">
               <div class="col-md-3">
-                <p class="social-buttons"><a href="https://twitter.com/" title=""><span class="social-round-icon fa-icon"><i class="fa fa-twitter"></i></span>@David_Folley</a></p>
+                <p class="social-buttons"><a href="https://twitter.com/" title=""><span class="social-round-icon fa-icon"><i class="fa fa-twitter"></i></span>@Seng Kue Vang</a></p>
               </div>
               <div class="col-md-3">
-                <p class="social-buttons"><a href="https://www.linkedin.com/" title=""><span class="social-round-icon fa-icon"><i class="fa fa-linkedin"></i></span>David Folley</a></p>
+                <p class="social-buttons"><a href="https://www.linkedin.com/" title=""><span class="social-round-icon fa-icon"><i class="fa fa-linkedin"></i></span>Seng Kue Vang</a></p>
               </div>
               <div class="col-md-3">
-                <p class="social-buttons"><a href="https://dribbble.com/" title=""><span class="social-round-icon fa-icon"><i class="fa fa-dribbble"></i></span>David Folley</a></p>
+                <p class="social-buttons"><a href="https://dribbble.com/" title=""><span class="social-round-icon fa-icon"><i class="fa fa-dribbble"></i></span>Seng Kue Vang</a></p>
               </div>
             </div>
           </div>
